fixed issue whereby hero images were clipped on small screens

--- a/assets-src/styles/sass/50-core-components/_hero.scss
+++ b/assets-src/styles/sass/50-core-components/_hero.scss
@@ -53,7 +53,10 @@
 
 		margin-left: auto;
 		margin-right: auto;
-		max-width: rem(500);
+		//max-width: rem(500);
+		@include mq($bp-tab-small) {
+			max-width: rem(500);
+		}
 
 	}
 
